--- a/.github/workflows/dotnet-framework-publish.yml
+++ b/.github/workflows/dotnet-framework-publish.yml
@@ -38,7 +38,7 @@ jobs:
     needs: build_and_publish
 
     steps:
-      #- name: Download Packaged Artifact
+      #- name: Download Packaged Artifact 1
       #  uses: actions/download-artifact@v2
       #  with:
       #    name: dotnetframework-webapp
