--- a/.github/workflows/dotnet-framework-publish.yml
+++ b/.github/workflows/dotnet-framework-publish.yml
@@ -42,7 +42,11 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: dotnetframework-webapp
-
+          
+      - name: Ping FTP
+        run: |
+           ping ${{ secrets.FTP_ADDRESS }}
+           
       - name: Upload Package to FTP
         run: |
-           sshpass -p "${{ secrets.FTP_PASSWORD }}" scp dotnetframework-webapp.zip ${{ secrets.FTP_USERNAME }}@${{ secrets.FTP_ADDRESS }}:${{ secrets.FTP_ADDRESS }}/site/deployments
+           sshpass -p "${{ secrets.FTP_PASSWORD }}" scp dotnetframework-webapp.zip ${{ secrets.FTP_USERNAME }}@${{ secrets.FTP_ADDRESS }}:/site/deployments
