--- a/.github/workflows/dotnet-framework-publish.yml
+++ b/.github/workflows/dotnet-framework-publish.yml
@@ -49,9 +49,13 @@ jobs:
             files: ./
             dest: dotnetframework-webapp.zip           
 
+      - name: Zip Release
+        uses: TheDoctor0/zip-release@0.6.1
+        with:
+          filename: dotnetframework-webapp.zip
+          # Base path for archive files
+          path: .
+
       - name: Upload Package to FTP
         run: |
            sshpass -p "${{ secrets.FTP_PASSWORD }}" scp dotnetframework-webapp.zip ${{ secrets.FTP_USERNAME }}@${{ secrets.FTP_ADDRESS }}:/site/deployments
-
-
-
