--- a/.github/workflows/dotnet-framework-publish.yml
+++ b/.github/workflows/dotnet-framework-publish.yml
@@ -62,5 +62,5 @@ jobs:
           server: ${{ secrets.FTP_ADDRESS }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}    
-          local-dir: /deploymentTemp/
+          local-dir: ./deploymentTemp/
           server-dir: /site/deployments/
